--- a/Storyboards/Home.storyboard
+++ b/Storyboards/Home.storyboard
@@ -100,8 +100,6 @@
         <!--Place List-->
         <scene sceneID="xts-fY-chq">
             <objects>
-                <exit id="jzi-g4-0PX" userLabel="Exit" sceneMemberID="exit"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZFr-ac-NJy" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="u5z-ae-Q0h" customClass="PlaceViewController" customModule="GoogleMapsAPITest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8Ts-R7-ze0"/>
@@ -128,13 +126,23 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dx0-i0-Q43">
+                                                    <rect key="frame" x="275" y="0.0" width="100" height="43.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="uvX-lf-EUk"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="Dx0-i0-Q43" secondAttribute="bottom" id="6H1-Cz-0FA"/>
+                                                <constraint firstAttribute="trailing" secondItem="Dx0-i0-Q43" secondAttribute="trailing" id="aDM-vp-5Wu"/>
                                                 <constraint firstItem="HdA-6Z-n9N" firstAttribute="centerY" secondItem="Wo8-0k-H5w" secondAttribute="centerY" id="iaR-jT-hXp"/>
                                                 <constraint firstItem="HdA-6Z-n9N" firstAttribute="leading" secondItem="Wo8-0k-H5w" secondAttribute="leading" id="oOn-Ct-bBR"/>
+                                                <constraint firstItem="Dx0-i0-Q43" firstAttribute="top" secondItem="Wo8-0k-H5w" secondAttribute="top" id="xVl-JF-ICl"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="placeImageView" destination="Dx0-i0-Q43" id="dil-FR-ea4"/>
                                             <outlet property="placeTextLabel" destination="HdA-6Z-n9N" id="pVK-QF-m3Z"/>
                                         </connections>
                                     </tableViewCell>
@@ -160,6 +168,8 @@
                         <outlet property="tableView" destination="fQc-IF-KdP" id="NKk-Py-gZM"/>
                     </connections>
                 </viewController>
+                <exit id="jzi-g4-0PX" userLabel="Exit" sceneMemberID="exit"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZFr-ac-NJy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2474" y="142"/>
         </scene>
@@ -179,7 +189,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L2u-tq-Fv5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="354" y="149"/>
+            <point key="canvasLocation" x="217" y="142"/>
         </scene>
     </scenes>
 </document>
