--- a/Storyboards/Home.storyboard
+++ b/Storyboards/Home.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="ceO-qq-1vs">
-                                <rect key="frame" x="16" y="295" width="343" height="77"/>
+                                <rect key="frame" x="16" y="271.5" width="343" height="124"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CyS-mf-4OF">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
@@ -40,6 +40,13 @@
                                         <connections>
                                             <action selector="mapButtonPressed:" destination="JZ4-JH-fZ4" eventType="touchUpInside" id="MMj-Aa-zgE"/>
                                             <segue destination="Nak-Lv-h2b" kind="show" identifier="toMapView" id="toW-Fh-IVG"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mN2-Xj-L8w">
+                                        <rect key="frame" x="123.5" y="94" width="96" height="30"/>
+                                        <state key="normal" title="Autocomplete"/>
+                                        <connections>
+                                            <action selector="autocompleteButtonPressed:" destination="JZ4-JH-fZ4" eventType="touchUpInside" id="rkP-F7-5N8"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -120,28 +127,48 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plz Make This Work" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HdA-6Z-n9N">
-                                                    <rect key="frame" x="0.0" y="11.5" width="150" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plz Make This Work" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HdA-6Z-n9N">
+                                                    <rect key="frame" x="0.0" y="2" width="145" height="41"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dx0-i0-Q43">
-                                                    <rect key="frame" x="275" y="0.0" width="100" height="43.5"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="MNC-Kf-jtj">
+                                                    <rect key="frame" x="175" y="0.0" width="200" height="43.5"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dx0-i0-Q43">
+                                                            <rect key="frame" x="0.0" y="0.0" width="200" height="13.5"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="200" id="uvX-lf-EUk"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tVt-Yv-lZd">
+                                                            <rect key="frame" x="0.0" y="13.5" width="200" height="30"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="30" id="8Nd-xg-2z1"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="100" id="uvX-lf-EUk"/>
+                                                        <constraint firstAttribute="trailing" secondItem="tVt-Yv-lZd" secondAttribute="trailing" id="5c3-cO-zL3"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Dx0-i0-Q43" secondAttribute="trailing" id="ekY-SU-ZBe"/>
                                                     </constraints>
-                                                </imageView>
+                                                </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="Dx0-i0-Q43" secondAttribute="bottom" id="6H1-Cz-0FA"/>
-                                                <constraint firstAttribute="trailing" secondItem="Dx0-i0-Q43" secondAttribute="trailing" id="aDM-vp-5Wu"/>
+                                                <constraint firstItem="MNC-Kf-jtj" firstAttribute="top" secondItem="Wo8-0k-H5w" secondAttribute="top" id="HgW-kx-Ih6"/>
+                                                <constraint firstItem="MNC-Kf-jtj" firstAttribute="leading" secondItem="HdA-6Z-n9N" secondAttribute="trailing" constant="30" id="dsL-KW-scN"/>
+                                                <constraint firstAttribute="trailing" secondItem="MNC-Kf-jtj" secondAttribute="trailing" id="iJK-W4-GGx"/>
                                                 <constraint firstItem="HdA-6Z-n9N" firstAttribute="centerY" secondItem="Wo8-0k-H5w" secondAttribute="centerY" id="iaR-jT-hXp"/>
+                                                <constraint firstAttribute="bottom" secondItem="MNC-Kf-jtj" secondAttribute="bottom" id="mVx-it-nb4"/>
                                                 <constraint firstItem="HdA-6Z-n9N" firstAttribute="leading" secondItem="Wo8-0k-H5w" secondAttribute="leading" id="oOn-Ct-bBR"/>
-                                                <constraint firstItem="Dx0-i0-Q43" firstAttribute="top" secondItem="Wo8-0k-H5w" secondAttribute="top" id="xVl-JF-ICl"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="attributionTextLabel" destination="tVt-Yv-lZd" id="wba-Qq-pS0"/>
                                             <outlet property="placeImageView" destination="Dx0-i0-Q43" id="dil-FR-ea4"/>
                                             <outlet property="placeTextLabel" destination="HdA-6Z-n9N" id="pVK-QF-m3Z"/>
                                         </connections>
