--- a/Storyboards/Home.storyboard
+++ b/Storyboards/Home.storyboard
@@ -23,18 +23,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="ceO-qq-1vs">
-                                <rect key="frame" x="16" y="271.5" width="343" height="124"/>
+                                <rect key="frame" x="16" y="64" width="343" height="573"/>
                                 <subviews>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CyS-mf-4OF">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="noS-vD-Wp4">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="479"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="listDestinationsTableViewCell" id="gih-e7-hzo" customClass="ListDestinationsTableViewCell" customModule="GoogleMapsAPITest" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="343" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gih-e7-hzo" id="3lw-xP-iPb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Destinations" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b5K-0C-QXi">
+                                                            <rect key="frame" x="13" y="11" width="96" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="b5K-0C-QXi" firstAttribute="leading" secondItem="3lw-xP-iPb" secondAttribute="leadingMargin" constant="5" id="MPs-P1-t15"/>
+                                                        <constraint firstItem="b5K-0C-QXi" firstAttribute="centerY" secondItem="3lw-xP-iPb" secondAttribute="centerY" id="s3C-St-Qjx"/>
+                                                    </constraints>
+                                                </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="destinationTextLabel" destination="b5K-0C-QXi" id="KNp-fT-0Ql"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VQk-ZI-sgx">
-                                        <rect key="frame" x="136.5" y="47" width="70" height="30"/>
+                                        <rect key="frame" x="136.5" y="496" width="70" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="70" id="HSe-sw-xGb"/>
+                                            <constraint firstAttribute="height" constant="30" id="Rnl-4i-MQg"/>
                                         </constraints>
                                         <state key="normal" title="MAP"/>
                                         <connections>
@@ -43,30 +67,35 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mN2-Xj-L8w">
-                                        <rect key="frame" x="123.5" y="94" width="96" height="30"/>
-                                        <state key="normal" title="Autocomplete"/>
+                                        <rect key="frame" x="131" y="543" width="81" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Gfh-99-3xe"/>
+                                        </constraints>
+                                        <state key="normal" title="Add a Place"/>
                                         <connections>
                                             <action selector="autocompleteButtonPressed:" destination="JZ4-JH-fZ4" eventType="touchUpInside" id="rkP-F7-5N8"/>
                                         </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="CyS-mf-4OF" firstAttribute="leading" secondItem="ceO-qq-1vs" secondAttribute="leading" id="Tfz-qO-3uW"/>
-                                    <constraint firstAttribute="trailing" secondItem="CyS-mf-4OF" secondAttribute="trailing" id="cPf-0x-wf9"/>
+                                    <constraint firstAttribute="trailing" secondItem="noS-vD-Wp4" secondAttribute="trailing" id="HpK-av-UW7"/>
+                                    <constraint firstItem="noS-vD-Wp4" firstAttribute="centerX" secondItem="ceO-qq-1vs" secondAttribute="centerX" id="O7f-Nk-Sn2"/>
+                                    <constraint firstItem="noS-vD-Wp4" firstAttribute="leading" secondItem="ceO-qq-1vs" secondAttribute="leading" id="PV2-aQ-UDT"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ceO-qq-1vs" firstAttribute="centerX" secondItem="UbD-CZ-Azn" secondAttribute="centerX" id="Vsk-3g-xag"/>
-                            <constraint firstItem="ceO-qq-1vs" firstAttribute="centerY" secondItem="UbD-CZ-Azn" secondAttribute="centerY" id="aJN-7T-o0v"/>
+                            <constraint firstItem="ceO-qq-1vs" firstAttribute="top" secondItem="UbD-CZ-Azn" secondAttribute="topMargin" constant="64" id="WVw-GG-Mhm"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ceO-qq-1vs" secondAttribute="trailing" id="b3P-RQ-s8V"/>
                             <constraint firstItem="ceO-qq-1vs" firstAttribute="leading" secondItem="UbD-CZ-Azn" secondAttribute="leadingMargin" id="eCB-NT-Lfz"/>
+                            <constraint firstItem="JBY-g3-CfJ" firstAttribute="top" secondItem="ceO-qq-1vs" secondAttribute="bottom" constant="30" id="lzJ-cN-Kby"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="J2w-5B-M3J"/>
                     <connections>
-                        <outlet property="locationTextField" destination="CyS-mf-4OF" id="ole-68-O5b"/>
+                        <outlet property="tableView" destination="noS-vD-Wp4" id="zP0-Ca-JqC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Za8-tD-wPC" userLabel="First Responder" sceneMemberID="firstResponder"/>
