--- a/Storyboards/Home.storyboard
+++ b/Storyboards/Home.storyboard
@@ -82,7 +82,7 @@
                                                 <state key="normal" title="MAP"/>
                                                 <connections>
                                                     <action selector="mapButtonPressed:" destination="JZ4-JH-fZ4" eventType="touchUpInside" id="MMj-Aa-zgE"/>
-                                                    <segue destination="Nak-Lv-h2b" kind="show" identifier="toMapView" id="toW-Fh-IVG"/>
+                                                    <segue destination="ORX-SL-5hb" kind="presentation" identifier="toMapView" id="ztv-bi-Z4D"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mN2-Xj-L8w">
@@ -139,49 +139,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Za8-tD-wPC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1020" y="141.67916041979012"/>
-        </scene>
-        <!--Map View Controller-->
-        <scene sceneID="cLY-ol-KXk">
-            <objects>
-                <viewController id="Nak-Lv-h2b" userLabel="Map View Controller" customClass="MapViewController" customModule="GoogleMapsAPITest" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="j7x-ig-Fbn"/>
-                        <viewControllerLayoutGuide type="bottom" id="LOL-gh-kh7"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="j8i-lT-MRr">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="THIS IS SO COOL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yls-BV-FXd">
-                                <rect key="frame" x="119.5" y="323" width="135" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="yls-BV-FXd" firstAttribute="centerY" secondItem="j8i-lT-MRr" secondAttribute="centerY" id="Fe9-H9-3rS"/>
-                            <constraint firstItem="yls-BV-FXd" firstAttribute="centerX" secondItem="j8i-lT-MRr" secondAttribute="centerX" id="xqi-2V-1nU"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="MAP" id="hXG-DB-Vow">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="yEY-7D-tHB">
-                            <connections>
-                                <segue destination="ieU-Ru-QLx" kind="unwind" identifier="cancel" unwindAction="unwindToHomeViewController:" id="vA9-N1-PBJ"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Nearby Places" id="kIO-xv-rQ3">
-                            <connections>
-                                <segue destination="u5z-ae-Q0h" kind="show" identifier="toPlacesList" id="gX3-Cs-Iqu"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6eZ-Pu-Lal" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="ieU-Ru-QLx" userLabel="Exit" sceneMemberID="exit"/>
-            </objects>
-            <point key="canvasLocation" x="1724" y="137"/>
         </scene>
         <!--Predictions Table View Controller-->
         <scene sceneID="9Nx-hQ-Tv4">
@@ -282,102 +239,6 @@
             </objects>
             <point key="canvasLocation" x="1822" y="868"/>
         </scene>
-        <!--Place List-->
-        <scene sceneID="xts-fY-chq">
-            <objects>
-                <viewController id="u5z-ae-Q0h" customClass="PlaceViewController" customModule="GoogleMapsAPITest" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="8Ts-R7-ze0"/>
-                        <viewControllerLayoutGuide type="bottom" id="12x-T9-ysn"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="laS-78-8aZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fQc-IF-KdP">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="listPlacesTableViewCell" id="pX8-V3-8yg" customClass="ListPlacesTableViewCell" customModule="GoogleMapsAPITest" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pX8-V3-8yg" id="Wo8-0k-H5w">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plz Make This Work" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HdA-6Z-n9N">
-                                                    <rect key="frame" x="0.0" y="2" width="145" height="41"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="MNC-Kf-jtj">
-                                                    <rect key="frame" x="175" y="0.0" width="200" height="43.5"/>
-                                                    <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dx0-i0-Q43">
-                                                            <rect key="frame" x="0.0" y="0.0" width="200" height="13.5"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="200" id="uvX-lf-EUk"/>
-                                                            </constraints>
-                                                        </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tVt-Yv-lZd">
-                                                            <rect key="frame" x="0.0" y="13.5" width="200" height="30"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="30" id="8Nd-xg-2z1"/>
-                                                            </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                    <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="tVt-Yv-lZd" secondAttribute="trailing" id="5c3-cO-zL3"/>
-                                                        <constraint firstAttribute="trailing" secondItem="Dx0-i0-Q43" secondAttribute="trailing" id="ekY-SU-ZBe"/>
-                                                    </constraints>
-                                                </stackView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="MNC-Kf-jtj" firstAttribute="top" secondItem="Wo8-0k-H5w" secondAttribute="top" id="HgW-kx-Ih6"/>
-                                                <constraint firstItem="MNC-Kf-jtj" firstAttribute="leading" secondItem="HdA-6Z-n9N" secondAttribute="trailing" constant="30" id="dsL-KW-scN"/>
-                                                <constraint firstAttribute="trailing" secondItem="MNC-Kf-jtj" secondAttribute="trailing" id="iJK-W4-GGx"/>
-                                                <constraint firstItem="HdA-6Z-n9N" firstAttribute="centerY" secondItem="Wo8-0k-H5w" secondAttribute="centerY" id="iaR-jT-hXp"/>
-                                                <constraint firstAttribute="bottom" secondItem="MNC-Kf-jtj" secondAttribute="bottom" id="mVx-it-nb4"/>
-                                                <constraint firstItem="HdA-6Z-n9N" firstAttribute="leading" secondItem="Wo8-0k-H5w" secondAttribute="leading" id="oOn-Ct-bBR"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="attributionTextLabel" destination="tVt-Yv-lZd" id="wba-Qq-pS0"/>
-                                            <outlet property="placeImageView" destination="Dx0-i0-Q43" id="dil-FR-ea4"/>
-                                            <outlet property="placeTextLabel" destination="HdA-6Z-n9N" id="pVK-QF-m3Z"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="fQc-IF-KdP" firstAttribute="top" secondItem="laS-78-8aZ" secondAttribute="top" id="doS-7N-Pr4"/>
-                            <constraint firstItem="fQc-IF-KdP" firstAttribute="leading" secondItem="laS-78-8aZ" secondAttribute="leading" id="hZX-nY-kfq"/>
-                            <constraint firstAttribute="trailing" secondItem="fQc-IF-KdP" secondAttribute="trailing" id="jtP-xN-Pye"/>
-                            <constraint firstItem="12x-T9-ysn" firstAttribute="top" secondItem="fQc-IF-KdP" secondAttribute="bottom" id="o5J-jh-yIJ"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Place List" id="LIc-PN-gF6">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="v40-ee-HLJ">
-                            <connections>
-                                <segue destination="jzi-g4-0PX" kind="unwind" identifier="selectionMade" unwindAction="unwindToMapViewController:" id="faU-ef-1E6"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="tableView" destination="fQc-IF-KdP" id="NKk-Py-gZM"/>
-                    </connections>
-                </viewController>
-                <exit id="jzi-g4-0PX" userLabel="Exit" sceneMemberID="exit"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZFr-ac-NJy" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2481" y="136"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="pdv-AE-c1j">
             <objects>
@@ -395,6 +256,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L2u-tq-Fv5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="217" y="142"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="IhD-ql-3ya">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Map" id="ORX-SL-5hb" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HnJ-ni-87U" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1724" y="137"/>
         </scene>
     </scenes>
 </document>
